LB-4436 photo print set selected photos

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2136,3 +2136,5 @@ then {11,99 TRY/Month}*/
 "printed_photo_card_body_no_right" = "";
 "printed_photo_card_info_no_right" = "";
 "printed_package_view" = "";
+"more_photo_right" = "";
+"no_more_photo_right" = "";
