--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2124,3 +2124,5 @@ then {11,99 TRY/Month}*/
 "printed_photo_card_body_no_right" = "";
 "printed_photo_card_info_no_right" = "";
 "printed_package_view" = "";
+"more_photo_right" = "";
+"no_more_photo_right" = "";
