--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2126,3 +2126,5 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "";
 "more_photo_right" = "";
 "no_more_photo_right" = "";
+"timeline_header" = "";
+"timeline_description" = "";
