LB-5080 photo print select photo screen bottom bar text changed

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2140,3 +2140,4 @@ then {11,99 TRY/Month}*/
 "no_more_photo_right" = "";
 "timeline_header" = "";
 "timeline_description" = "";
+"selected_for_print" = "";
