--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2170,3 +2170,4 @@ then {11,99 TRY/Month}*/
 "no_more_photo_right" = "";
 "timeline_header" = "";
 "timeline_description" = "";
+"selected_for_print" = "";
