--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2142,3 +2142,4 @@ then {11,99 TRY/Month}*/
 "no_more_photo_right" = "";
 "timeline_header" = "";
 "timeline_description" = "";
+"selected_for_print" = "";
