--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2185,3 +2185,5 @@ then {11,99 TRY/Month}*/
 "timeline_header" = "2023’un en güzel anıları";
 "timeline_description" = "Bu senenin en güzel anılarını senin için derledik. Hemen keşfet.";
 "selected_for_print" = "Baskı için seçilenler";
+"print_cancel_popup_question" = "İptal etmek isteğine emin misin?";
+"print_cancel_popup_info" = "Basılı albüm için seçtiğin tüm fotoğraf düzenlemelerin silinecektir. Yeniden fotoğraf seçmen ve yeniden düzenlemen gereklidir.";
