LB-5113 photo print add adress city district api LB-4443 photo print add adress popup

--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2139,40 +2139,62 @@ then {11,99 TRY/Month}*/
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "Skedari (%@) që po përpiqeni të filtroni nuk mund të gjendet.";
 "contact_us_complaint_cellfie" = "Faleminderit që na kontaktuat. Kërkesa juaj është përcjellë Në Cellfie Mobile për shqyrtim. Ne do të ndajmë me ta çdo informacion të nevojshëm që ju jepni, të tilla si informacion në lidhje me pajisjen tuaj, informacionin e përdorimit të lifebox, informacionin e kontaktit dhe informacionin personal për të hetuar çështjen. Fotografitë/videot dhe përmbajtjet e tjera që ngarkoni në lifebox nuk do të ndahen me Cellfire Mobile.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
-"print_info_popup_title" = "";
-"print_info_popup_subtitle" = "";
-"print_info_popup_checkbox" = "";
-"print_select_photo_button" = "";
-"print_select_photo_screen" = "";
-"print_select_photo_screen_bar" = "";
-"print_continue_button" = "";
-"print_missing_photo_popup_title" = "";
-"print_missing_photo_popup_subtitle" = "";
-"create_cell_popup" = "";
-"create_slide_popup" = "";
+"Office_Filter_Not_Found" = "Skedari që u përpoqët të filtroni (%@) nuk u gjet.";
+"new_print" = "Krijoni Printim Të Ri";
+"print_info_popup_title" = "Zgjidhni 5 Foto";
+"print_info_popup_subtitle" = "Zgjidhni një maksimum prej 5 fotografish për të shtypur këtë muaj dhe lërini ato të vijnë menjëherë në shtëpinë tuaj.";
+"print_info_popup_checkbox" = "Mos e tregoni më këtë paralajmërim.";
+"print_select_photo_button" = "Zgjidhni Foton";
+"print_select_photo_screen" = "Zgjidhni Foton";
+"print_select_photo_screen_bar" = "Zgjedhur për Printim";
+"print_continue_button" = "Vazhdoni";
+"print_missing_photo_popup_title" = "Ju po dërgoni %d numri i fotove për të shtypur";
+"print_missing_photo_popup_subtitle" = "Ju keni %d më shumë foto për të dërguar. Nëse vazhdoni, nuk do të jeni në gjendje të dërgoni fotot e mbetura %d këtë muaj";
+"create_cell_popup" = "Krijoni Fletë Pune";
+"create_slide_popup" = "Krijoni Rrëshqitje";
 "kktc_restore_info" = "Kuzey Kıbrıs Turkcell klientët mund të fillojnë anëtarësimin e tyre në linjën e tyre duke shtypur LIFEBOX 50GB për paketën lifebox 50gb, LIFEBOX 500GB për paketën lifebox 500gb dhe LIFEBOX 2.5TB për paketën lifebox 2.5tb dhe të dërgojnë në 3030.";
-"edit_printphoto_info_label" = "";
-"print_edit_photo_page_name" = "";
-"print_photo_bad_quality_info" = "";
-"print_photo_bad_quality_continue" = "";
-"print_photo_bad_quality_new" = "";
-"no_print_package_info" = "";
-"print_package_question" = "";
-"print_package_view" = "";
-"printed_photo_card_title" = "";
-"printed_photo_card_info" = "";
-"printed_photo_card_body" = "";
-"printed_photo_card_body_no_right" = "";
-"printed_photo_card_info_no_right" = "";
-"printed_package_view" = "";
-"more_photo_right" = "";
-"no_more_photo_right" = "";
-"timeline_header" = "";
-"timeline_description" = "";
-"selected_for_print" = "";
-"print_cancel_popup_question" = "";
-"print_cancel_popup_info" = "";
-"no_right_print_popup_title" = "";
-"no_right_print_popup_info" = "";
+"edit_printphoto_info_label" = "Klikoni në foto për të redaktuar";
+"print_edit_photo_page_name" = "Redakto Foton";
+"print_photo_bad_quality_info" = "Fotoja që keni zgjedhur është më e vogël se %d MB. Do të ketë një humbje në cilësinë e printimit.";
+"print_photo_bad_quality_continue" = "Vazhdoni me foton e zgjedhur.";
+"print_photo_bad_quality_new" = "Zgjidhni një foto tjetër.";
+"no_print_package_info" = "Kjo veçori nuk është e disponueshme në paketat tuaja ekzistuese.";
+"print_package_question" = "Dëshironi të shikoni paketën tuaj të printimit?";
+"print_package_view" = "Shikoni Paketën";
+"printed_photo_card_title" = "Paketa Ime E Printimit";
+"printed_photo_card_info" = "Bëni 5 fotografi të shtypura çdo muaj.";
+"printed_photo_card_body" = "Printoni fotot tuaja.";
+"printed_photo_card_body_no_right" = "Ju keni përdorur të drejtat tuaja të printimit të fotografive.";
+"printed_photo_card_info_no_right" = "Ju mund të ribotoni që nga data %d.";
+"printed_package_view" = "Shiko paketat e mia të printimit.";
+"more_photo_right" = "Ju keni më shumë se %d dorëzim fotografie. A jeni i sigurt që doni të vazhdoni?";
+"no_more_photo_right" = "Ju keni zgjedhur më shumë se fotot %d. Redukto për të vazhduar.";
+"timeline_header" = "Kujtimet më të mira të vitit 2023";
+"timeline_description" = "Ne kemi përpiluar kujtimet më të mira të këtij viti për ju. Zbuloni ato tani!";
+"selected_for_print" = "Zgjedhur për printim";
+"print_cancel_popup_question" = "A jeni i sigurt që doni të anuloni?";
+"print_cancel_popup_info" = "Të gjitha redaktimet e fotografive që keni zgjedhur për albumin e shtypur do të fshihen. Do t'ju duhet të zgjidhni dhe modifikoni përsëri fotot.";
+"no_right_print_popup_title" = "Ju Keni Përdorur të Drejtën Tuaj Për të Printuar";
+"no_right_print_popup_info" = "Ju keni përdorur të drejtën e printimit të fotografive të përfshira në paketën tuaj. Kur paketa juaj të rinovohet, mund t'i dërgoni sërish fotot tuaja për printim.";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
