--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2108,40 +2108,62 @@ then {11,99 TRY/Month}*/
 "create_collage_select_collage" = "";
 "office_filter_not_found" = "تعذر العثور على الملف (%@) الذي تحاول تصفيته.";
 "contact_us_complaint_cellfie" = "شكرا على الاتصال بنا. تمت إعادة توجيه طلبك إلىCellfie Mobile للمراجعة. سنشارك معهم أي معلومات ضرورية تقدمها ، مثل معلومات حول جهازك ، ومعلومات استخدام lifebox ، ومعلومات الاتصال ، والمعلومات الشخصية للتحقيق في المشكلة. لن تتم مشاركة الصور/مقاطع الفيديو والمحتويات الأخرى التي تقوم بتحميلها إلى lifebox مع Cellfie Mobile.";
-"Office_Filter_Not_Found" = "";
-"new_print" = "";
-"print_info_popup_title" = "";
-"print_info_popup_subtitle" = "";
-"print_info_popup_checkbox" = "";
-"print_select_photo_button" = "";
-"print_select_photo_screen" = "";
-"print_select_photo_screen_bar" = "";
-"print_continue_button" = "";
-"print_missing_photo_popup_title" = "";
-"print_missing_photo_popup_subtitle" = "";
-"create_cell_popup" = "";
-"create_slide_popup" = "";
+"Office_Filter_Not_Found" = "لم يتم العثور على الملف الذي حاولت تصفيته (%@).";
+"new_print" = "إنشاء نسخة مطبوعة جديدة";
+"print_info_popup_title" = "اختر 5 صور";
+"print_info_popup_subtitle" = "اختر ما يصل إلى 5 صور لطباعتها هذا الشهر واطلب توصيلها إلى منزلك.";
+"print_info_popup_checkbox" = "لا تظهر هذا التحذير مرة أخرى.";
+"print_select_photo_button" = "اختر صورة";
+"print_select_photo_screen" = "اختر صورة";
+"print_select_photo_screen_bar" = "مختارة للطباعة";
+"print_continue_button" = "استمر";
+"print_missing_photo_popup_title" = "أنت ترسل %d عدد الصور للطباعة";
+"print_missing_photo_popup_subtitle" = "لديك %d صورة إضافية لإرسالها. إذا تابعت، فلن تتمكن من إرسال الصور الـ %d المتبقية هذا الشهر";
+"create_cell_popup" = "إنشاء ورقة عمل";
+"create_slide_popup" = "إنشاء شريحة";
 "kktc_restore_info" = "يمكن لعملاء Kuzey Kıbrıs Turkcell بدء عضويتهم في خطهم عن طريق كتابة LIFEBOX 50GB لباقة lifebox 50GB، وLIFEBOX 500GB لباقة lifebox 500GB وLIFEBOX 2.5TB لحزمة lifebox 2.5TB وإرسالها إلى 3030.";
-"edit_printphoto_info_label" = "";
-"print_edit_photo_page_name" = "";
-"print_photo_bad_quality_info" = "";
-"print_photo_bad_quality_continue" = "";
-"print_photo_bad_quality_new" = "";
-"no_print_package_info" = "";
-"print_package_question" = "";
-"print_package_view" = "";
-"printed_photo_card_title" = "";
-"printed_photo_card_info" = "";
-"printed_photo_card_body" = "";
-"printed_photo_card_body_no_right" = "";
-"printed_photo_card_info_no_right" = "";
-"printed_package_view" = "";
-"more_photo_right" = "";
-"no_more_photo_right" = "";
-"timeline_header" = "";
-"timeline_description" = "";
-"selected_for_print" = "";
-"print_cancel_popup_question" = "";
-"print_cancel_popup_info" = "";
-"no_right_print_popup_title" = "";
-"no_right_print_popup_info" = "";
+"edit_printphoto_info_label" = "انقر على الصورة لتحريرها";
+"print_edit_photo_page_name" = "تحرير الصورة";
+"print_photo_bad_quality_info" = "الصورة التي حددتها أصغر من %d ميغابايت. سيكون هناك خسارة في جودة الطباعة.";
+"print_photo_bad_quality_continue" = "تواصل مع الصورة المحددة.";
+"print_photo_bad_quality_new" = "اختر صورة مختلفة.";
+"no_print_package_info" = "هذه الميزة غير متوفرة في الحزم الموجودة لديك.";
+"print_package_question" = "هل تريد عرض حزمة الطباعة الخاصة بك?";
+"print_package_view" = "عرض الباقة";
+"printed_photo_card_title" = "حزمة الطباعة الخاصة بي";
+"printed_photo_card_info" = "لديك 5 صور مطبوعة كل شهر.";
+"printed_photo_card_body" = "قم بطباعة صورك.";
+"printed_photo_card_body_no_right" = "لقد استخدمت بالفعل حقك في طباعة الصور.";
+"printed_photo_card_info_no_right" = "يمكنك إعادة طبع اعتبارا من %d التاريخ.";
+"printed_package_view" = "عرض حزم الطباعة الخاصة بي";
+"more_photo_right" = "لقد اخترت أكثر من %d الصور. تقليل للمتابعة.";
+"no_more_photo_right" = "كنت قد حصلت على أكثر من %d تقديم الصور. هل أنت متأكد أنك تريد الاستمرار";
+"timeline_header" = "أفضل ذكريات 2023";
+"timeline_description" = "قمنا بتجميع أفضل ذكريات هذا العام من أجلك. تحقق منهم الآن!";
+"selected_for_print" = "مختارة للطباعة";
+"print_cancel_popup_question" = "هل أنت متأكد أنك تريد إلغاء?";
+"print_cancel_popup_info" = "سيتم حذف جميع تعديلات الصور التي حددتها للألبوم المطبوع. سوف تحتاج إلى تحديد وتحرير الصور مرة أخرى.";
+"no_right_print_popup_title" = "لقد استخدمت حقك في الطباعة";
+"no_right_print_popup_info" = "لقد استخدمت حق طباعة الصور المضمنة في الحزمة الخاصة بك. عندما يتم تجديد الحزمة الخاصة بك ، يمكنك إرسال صورك للطباعة مرة أخرى.";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
