--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2147,3 +2147,25 @@ then {11,99 TRY/Month}*/
 "print_cancel_popup_info" = "";
 "no_right_print_popup_title" = "";
 "no_right_print_popup_info" = "";
+"send_print_button" = "";
+"add_address" = "";
+"send_print_popup_title" = "";
+"send_print_popup_address" = "";
+"send_print_popup_info" = "";
+"address_title" = "";
+"address_city" = "";
+"address_district" = "";
+"address_neighbourhood" = "";
+"address_street" = "";
+"address_building_no" = "";
+"address_apartment_no" = "";
+"address_postacode" = "";
+"add_saved_my_address" = "";
+"save_address" = "";
+"update_address" = "";
+"use_address" = "";
+"change_address" = "";
+"sent_print_info_popup_title" = "";
+"sent_print_info_popup_body" = "";
+"address_title_placeholder" = "";
+"select_city_district" = "";
